Add index on first 6 chapters of nutrition

--- a/nutrition.tex
+++ b/nutrition.tex
@@ -8,7 +8,7 @@
 \title{Што і калі есьці}
 \date{2020 Пераклад 2022}
 
-% \includeonly{willpower/chapter4}
+% \includeonly{nutrition/chapter3}
 
 \begin{document}
 
