--- a/nutrition/chapter1.tex
+++ b/nutrition/chapter1.tex
@@ -19,10 +19,10 @@
 \subsection{Як гэта ўплывае на здароўе?}
 
 \paragraph{Парушэньне мэтабалізму й~працы гармонаў.}
-Перакусы зьмяншаюць узровень гармону грэліну, які адказвае за адчуваньне голаду, а~гэта, у~сваю чаргу, можа павялічваць трывогу й~зьмяншаць узровень задаволенасьці. Калі ў~страўнік трапляе нават адносна невялікая колькасьць ежы, адразу пачынаецца выдзяленьне стрававальных фэрмэнтаў, выпрацоўка інсуліну, зьніжэньне ўзроўню грэліну. Гэтыя ваганьні, якія паўтараюцца шматкроць на працягу дня, могуць мець неспрыяльны эфэкт у~выглядзе зьніжэньня адчувальнасьці да гармонаў (рэзыстэнтнасьць), што шкодна для здароўя. Асабліва шкодныя парушэньні выпрацоўкі гармону лептыну, які разам з~грэлінам зьяўляецца галоўным рэгулятарам апэтыту. Перакусы правакуюць ваганьні глюкозы ў~крыві («цукровыя арэлі»). Напэўна, вы заўважалі, што нават маленькі кавалачак ежы на тле сытасьці можа абудзіць пачуцьцё голаду.
+Перакусы зьмяншаюць узровень гармону грэліну\index{грэлін}, які адказвае за адчуваньне голаду, а~гэта, у~сваю чаргу, можа павялічваць трывогу й~зьмяншаць узровень задаволенасьці. Калі ў~страўнік трапляе нават адносна невялікая колькасьць ежы, адразу пачынаецца выдзяленьне стрававальных фэрмэнтаў, выпрацоўка інсуліну\index{інсулін}, зьніжэньне ўзроўню грэліну\index{грэлін}. Гэтыя ваганьні, якія паўтараюцца шматкроць на працягу дня, могуць мець неспрыяльны эфэкт у~выглядзе зьніжэньня адчувальнасьці да гармонаў (рэзыстэнтнасьць), што шкодна для здароўя. Асабліва шкодныя парушэньні выпрацоўкі гармону лептыну\index{лептын}, які разам з~грэлінам\index{грэлін} зьяўляецца галоўным рэгулятарам апэтыту. Перакусы правакуюць ваганьні глюкозы ў~крыві («цукровыя арэлі»). Напэўна, вы заўважалі, што нават маленькі кавалачак ежы на тле сытасьці можа абудзіць пачуцьцё голаду.
 
 \paragraph{Пераяданьне.}
-Адзін з~пабочных эфэктаў перакусаў~--- гэта незаўважнае ўжываньне вялікай колькасьці калёрыяў па-за прыёмамі ежы. Прадукты для перакусаў часьцей за ўсё маюць высокую колькасьць калёрыяў і валодаюць здольнасьцю ўзмацняць апэтыт. Выпадкова пад'едзены кавалачак на працы, у~стрэсе, з~гарбатай~--- усё гэта ператвараецца ў~незаўважнае для нас, але выяўнае пераяданьне. Яно шкодзіць здароўю, нават калі пакуль не адбіваецца на выглядзе цела, бо самы небясьпечны тлушч не падскурны, а~нутравы (вісцэральны). Ежа на хаду, за стырном, падчас тэлефоннай размовы таксама зьніжае ўзровень насычэньня й~вядзе да залішняга спажываньня ежы. Перакусы шкодныя й~людзям без атлусьценьня. Так, навукоўцы высьветлі, што й~людзі з~нармальнай вагой палепшаць сваё здароўе, адмовіўшыся ад 200--300\,ккал на дзень, а~дзеці часам зьядаюць падчас перакусаў больш, чым у~асноўныя прыёмы ежы, і бацькі дзівяцца адсутнасьці ў~іх апэтыту. Адмоўцеся ад перакусаў~--- і вы вернеце сабе апэтыт!
+Адзін з~пабочных эфэктаў перакусаў~--- гэта незаўважнае ўжываньне вялікай колькасьці калёрыяў па-за прыёмамі ежы. Прадукты для перакусаў часьцей за ўсё маюць высокую колькасьць калёрыяў і валодаюць здольнасьцю ўзмацняць апэтыт. Выпадкова пад'едзены кавалачак на працы, у~стрэсе, з~гарбатай~--- усё гэта ператвараецца ў~незаўважнае для нас, але выяўнае пераяданьне. Яно шкодзіць здароўю, нават калі пакуль не адбіваецца на выглядзе цела, бо самы небясьпечны тлушч не падскурны, а~нутравы (вісцэральны)\index{вісцэральны тлушч}\index{тлушч вісцэральны}. Ежа на хаду, за стырном, падчас тэлефоннай размовы таксама зьніжае ўзровень насычэньня й~вядзе да залішняга спажываньня ежы. Перакусы шкодныя й~людзям без атлусьценьня. Так, навукоўцы высьветлі, што й~людзі з~нармальнай вагой палепшаць сваё здароўе, адмовіўшыся ад 200--300\,ккал на дзень, а~дзеці часам зьядаюць падчас перакусаў больш, чым у~асноўныя прыёмы ежы, і бацькі дзівяцца адсутнасьці ў~іх апэтыту. Адмоўцеся ад перакусаў~--- і вы вернеце сабе апэтыт!
 
 \paragraph{Парушэньне харчовага рэжыму і харчовых паводзінаў.}
 Чым болей перакусаў, тым меней карыснай ежы вы зьясьцё ў~асноўныя прыёмы ежы. Фармуецца заганнае кола: перакусваючы, вы менш зьядаеце ў~асноўны прыём ежы і зноў хочаце есьці. Гэта парушае нармальныя харчовыя паводзіны й~закладае нездаровыя звычкі. Я~бачу, як людзі зьвяртаюцца да перакусаў для ўзьняцьця настрою пры стрэсе: такая звычка можа прывесьці да парушэньня нармальнай працы мозгу й~павялічыць рызыку дэпрэсіі.
@@ -30,7 +30,7 @@
 \tipbox{Дзеці часам зьядаюць падчас перакусаў больш, чым у~асноўныя прыёмы ежы, і бацькі дзівяцца адсутнасьці ў~іх апэтыту. Адмоўцеся ад перакусаў~--- і вы вернеце сабе апэтыт!}
 
 \paragraph{Іншыя прычыны.}
-Пэрыядычныя, альбо хаатычныя, перакусы павялічваюць рызыку для здароўя, а~вось іх перавагі для здароўя маюць слабую навуковую базу. Перакусы павялічваюць рызыку захворваньняў печані, такіх як тлушчавая дыстрафія печані. Зьніжаецца інтэнсіўнасьць клеткавага аднаўленьня і самаачышчэньня~--- аўтафагіі. Акрамя таго, павелічэньне частаты харчаваньня ўзмацняе нагрузку на печань і ўзровень кіслотнай нагрузкі на зубы. На жаль, мы бачым актыўную прапаганду перакусаў у~дыеталёгіі, што ня йдзе на карысьць здароўю. Актыўную прапаганду перакусаў вядуць і вытворцы розных батончыкаў ды гатовых прадуктаў.
+Пэрыядычныя, альбо хаатычныя, перакусы павялічваюць рызыку для здароўя, а~вось іх перавагі для здароўя маюць слабую навуковую базу. Перакусы павялічваюць рызыку захворваньняў печані, такіх як тлушчавая дыстрафія печані. Зьніжаецца інтэнсіўнасьць клеткавага аднаўленьня і самаачышчэньня~--- аўтафагіі\index{аўтафагія}. Акрамя таго, павелічэньне частаты харчаваньня ўзмацняе нагрузку на печань і ўзровень кіслотнай нагрузкі на зубы. На жаль, мы бачым актыўную прапаганду перакусаў у~дыеталёгіі, што ня йдзе на карысьць здароўю. Актыўную прапаганду перакусаў вядуць і вытворцы розных батончыкаў ды гатовых прадуктаў.
 
 \subsection{Асноўныя прынцыпы}
 
@@ -40,11 +40,11 @@
 
 Важна разумець, што нават невялікая колькасьць калёрыяў у~выглядзе перакусаў~--- гэта ня проста мэханічны дадатак да сумы зьедзенага, а, па сутнасьці, дадатковы прыём ежы, запуск усяго працэсу страваваньня (выдзяленьне фэрмэнтаў, зьмяненьне маторыкі кішачніка, выдзяленьне кішачных і мэтабалічных гармонаў). Датрыманьне правіла чыстых прамежкаў~--- гэта падмурак здаровых харчовых паводзінаў, умацаваньне самадысцыпліны й~паляпшэньня мэтабалізму.
 
-\paragraph{Сэнсарная стымуляцыя} (выгляд і пах ежы, размовы пра ежу і г.~д.). Навукова даведзена, што пах і выгляд ежы могуць уплываць на выдзяленьне інсуліну. Таму найболей камфортнай для працы будзе асяродак без харчовых стымулаў. Не працуйце за абедзенным сталом і не абедайце за працоўным.
+\paragraph{Сэнсарная стымуляцыя} (выгляд і пах ежы, размовы пра ежу і г.~д.). Навукова даведзена, што пах і выгляд ежы могуць уплываць на выдзяленьне інсуліну\index{інсулін}. Таму найболей камфортнай для працы будзе асяродак без харчовых стымулаў. Не працуйце за абедзенным сталом і не абедайце за працоўным.
 
 \paragraph{Толькі вада.}
 
-Падчас пустых інтэрвалаў дапушчальна піць толькі негазаваную ваду. У~рэдкіх выключэньнях~--- некалярыйныя напоі без кафеіну, зёлкі, гарбату каркадэ, газаваную ваду, але лепш абысьціся бязь іх. Гарбату й~каву варта піць безь вяршкоў, цукру, цукразаменьнікаў і, вядома ж, дэсэрту. Пажадана абысьціся й~бяз жуйкі.
+Падчас пустых інтэрвалаў дапушчальна піць толькі негазаваную ваду. У~рэдкіх выключэньнях~--- некалярыйныя напоі без кафеіну\index{кафеін}, зёлкі, гарбату каркадэ, газаваную ваду, але лепш абысьціся бязь іх. Гарбату й~каву варта піць безь вяршкоў, цукру, цукразаменьнікаў і, вядома ж, дэсэрту. Пажадана абысьціся й~бяз жуйкі.
 
 \subsection{Як трымацца правіла? Ідэі ды парады}
 
@@ -66,7 +66,7 @@
 \paragraph{Неадчэпныя думкі пра ежу.}
 Чым мацней вы гоніце думкі пра ежу, тым часьцей яны прыходзяць. Пераключайце ўвагу: прайдзіцеся, папрысядайце. Паспрабуйце давесьці думкі да абсурду (думкі пра пончык: супэргерой чалавек-пончык, машына-пончык, колькі пончыкаў я зьем, пакуль мяне не парве, і г.~д.). Пажартуйце зь сябе і пасьмейцеся са спакусы. Ня сьмешна? Але ж вы дарослы чалавек, які пакутуе ад кавалка смажанага цеста з~тлушчам! Гэта сапраўды сьмешна.
 
-\paragraph{Не глядзіце фуд-порна.}
+\paragraph{Не глядзіце фуд-порна\index{фуд-порна}.}
 Пад тэрмінам «фуд-порна» разумеюць узбуджальныя выявы ежы ў~сацсетках, часопісах і на сайтах. Устрымлівайцеся ад разгляданьня карцінак з~такой ежай, абмеркаваньня рэцэптаў, прагляду кулінарных перадач. Ежа~--- гэта толькі частка жыцьця, ня трэба запаўняць ёю больш часу, чым неабходна. Навукова даведзена, што разгляд выяваў ежы можа выклікаць голад і жаданьне есьці ў~абсалютна сытага чалавека.
 
 \tipbox{Ежце толькі за абедзенным сталом, а~не на хаду ці за ноўтбукам. Апошняе небясьпечнае выпрацоўкай умоўнага рэфлексу, калі адно выгляд ноўтбука будзе наганяць апэтыт.}
