--- a/nutrition/chapter3.tex
+++ b/nutrition/chapter3.tex
@@ -1,37 +1,37 @@
 \chapter{Харчовы хранатып}
 
-Харчовы хранатып~--- часавыя перавагі людзей, зьвязаныя з~тым, калі яны зьядаюць большую частку свайго штодзённага каляражу. Навукоўцы высьветлілі, што работа стрававальнай сыстэмы наўпрост зьвязаная з~работай сыстэмы нашых цыркадных (штодзённых) рытмаў, якія кантралююцца ня толькі з~мозгу (наш цэнтральны «гадзіньнік»~--- гэта адмысловая частка мозгу пад назвай «супрахіязматычнае ядро»), але й~з перыферычнага «гадзіньніка»~--- печані, цягліцаў, страўнікава-кішачнага тракту, белай тлушчавай тканкі й~іншых. Выпрацоўка гармонаў, адчувальнасьць да інсуліну, мэтабалічная актыўнасьць печані мяняюцца ў~розны час дня. У~працэсе эвалюцыі арганізм адаптаваўся да ваганьняў дня і ночы і адаптаваў да іх сваю працу, актыўнасьць шматлікіх генаў мяняецца ў~цыркадных рытмах.
+Харчовы хранатып~--- часавыя перавагі людзей, зьвязаныя з~тым, калі яны зьядаюць большую частку свайго штодзённага каляражу. Навукоўцы высьветлілі, што работа стрававальнай сыстэмы наўпрост зьвязаная з~работай сыстэмы нашых цыркадных (штодзённых) рытмаў\index{цыркадныя рытмы}, якія кантралююцца ня толькі з~мозгу (наш цэнтральны «гадзіньнік»~--- гэта адмысловая частка мозгу пад назвай «супрахіязматычнае ядро\index{супрахіязматычнае ядро}»), але й~з перыферычнага «гадзіньніка»~--- печані, цягліцаў, страўнікава-кішачнага тракту, белай тлушчавай тканкі й~іншых. Выпрацоўка гармонаў, адчувальнасьць да інсуліну, мэтабалічная актыўнасьць печані мяняюцца ў~розны час дня. У~працэсе эвалюцыі арганізм адаптаваўся да ваганьняў дня і ночы і адаптаваў да іх сваю працу, актыўнасьць шматлікіх генаў мяняецца ў~цыркадных рытмах.
 
-У ідэале вакно харчаваньня мусіць супадаць са сьветлавым вакном дня і з~часам максымальнай актыўнасьці чалавека. Чым мацнейшае разыходжаньне часу харчовага вакна са сьветлавым днём, тым большая праблема. Зьядайце ранкам і ўдзень ня меней за 80\,\% агульнага дзённага каляражу. Разьмеркаваньне калёрыяў паміж сьняданкам, абедам і вячэрай у~суадносінах 50, 30 і 20\,\% паляпшае здароўе. Навуковыя дасьледаваньні паказалі, што адна й~тая ж ежа, зьедзеная ў~розны час дня, дзейнічае па-рознаму, і позьнія багатыя вячэры могуць павысіць узровень сыстэмнага запаленьня, дыябэту, пухлінаў і парушыць якасьць сну.
+У ідэале вакно харчаваньня мусіць супадаць са сьветлавым вакном дня і з~часам максымальнай актыўнасьці чалавека. Чым мацнейшае разыходжаньне часу харчовага вакна са сьветлавым днём, тым большая праблема. Зьядайце ранкам і ўдзень ня меней за 80\,\% агульнага дзённага каляражу. Разьмеркаваньне калёрыяў паміж сьняданкам, абедам і вячэрай у~суадносінах 50, 30 і 20\,\% паляпшае здароўе. Навуковыя дасьледаваньні паказалі, што адна й~тая ж ежа, зьедзеная ў~розны час дня, дзейнічае па-рознаму, і позьнія багатыя вячэры могуць павысіць узровень сыстэмнага запаленьня, дыябэту\index{дыябэт}, пухлінаў і парушыць якасьць сну.
 
 \subsection{Як зьявілася праблема?}
 
 \paragraph{Адкладзены лад жыцьця.}
-Са зьяўленьнем штучных крыніц сьвятла, працы раніцай і адпачынку ўвечары наш графік дзейнасьці паступова ссоўваецца на пазьнейшыя гадзіны, т.~зв. «адкладзены лад жыцьця». Ранкам мы сьпяшаемся на працу, прапусьціўшы сьняданак, увечары мы ямо шмат і сытна. Вялікая колькасьць штучных крыніц сьвятла, асабліва сьвятлодыёдаў, блякуе вытворчасьць мэлятаніну і зьбівае працу ўнутранага гадзіньніка і парушае апэтыт. Чым пазьнейшая вячэра, тым менш хочацца есьці ў~час сьняданку, так і ўтвараецца заганнае кола.
+Са зьяўленьнем штучных крыніц сьвятла, працы раніцай і адпачынку ўвечары наш графік дзейнасьці паступова ссоўваецца на пазьнейшыя гадзіны, т.~зв. «адкладзены лад жыцьця». Ранкам мы сьпяшаемся на працу, прапусьціўшы сьняданак, увечары мы ямо шмат і сытна. Вялікая колькасьць штучных крыніц сьвятла, асабліва сьвятлодыёдаў, блякуе вытворчасьць мэлятаніну\index{мэлятанін} і зьбівае працу ўнутранага гадзіньніка і парушае апэтыт. Чым пазьнейшая вячэра, тым менш хочацца есьці ў~час сьняданку, так і ўтвараецца заганнае кола.
 
 \paragraph{Начныя здавальненьні.}
-Спрабуючы атрымаць болей здавальненьня, мы пачынаем есьці пазьней увечары. Ежа ў~цемры прыносіць нам больш асалоды, гэтая асаблівасьць зьвязаная з~рэцэптарамі мэлятаніну і дафаміну ў~мозгу. Уначы адчувальнасьць рэцэптараў дафаміну вышэйшая, і гэта вядзе да таго, што эклер і серыял чым пазьнейшыя, тым смачнейшыя. Такім чынам, людзі несьвядома падсаджваюцца на «позьняе здавальненьне»: чым менш радасьці й~прыемнасьцяў яны атрымліваюць на працягу дня, тым мацней хочуць расьцягнуць іх увечары, як многія кажуць~--- «жыць прынамсі ўвечары». Часта зрух харчовага вакна прыводзіць да «сындрому начной яды», калі людзі сытна сталуюцца позна ўвечары і ўночы, бадай што ня маючы змогі супрацьстаяць імпульсам падсілкавацца.
+Спрабуючы атрымаць болей здавальненьня, мы пачынаем есьці пазьней увечары. Ежа ў~цемры прыносіць нам больш асалоды, гэтая асаблівасьць зьвязаная з~рэцэптарамі мэлятаніну\index{мэлятанін} і дафаміну\index{дафамін} ў~мозгу. Уначы адчувальнасьць рэцэптараў дафаміну\index{дафамін} вышэйшая, і гэта вядзе да таго, што эклер і серыял чым пазьнейшыя, тым смачнейшыя. Такім чынам, людзі несьвядома падсаджваюцца на «позьняе здавальненьне»: чым менш радасьці й~прыемнасьцяў яны атрымліваюць на працягу дня, тым мацней хочуць расьцягнуць іх увечары, як многія кажуць~--- «жыць прынамсі ўвечары». Часта зрух харчовага вакна прыводзіць да «сындрому начной яды», калі людзі сытна сталуюцца позна ўвечары і ўночы, бадай што ня маючы змогі супрацьстаяць імпульсам падсілкавацца.
 
 \subsection{Як гэта ўплывае на здароўе?}
 
 \paragraph{Парушэньні вугляводнага абмену.}
-Важны гармон інсулін і начны гармон мэлятанін шчыльна ўзаемадзейнічаюць. У~норме ўзроўні гармону сну мэлятаніну і інсуліну, які рэгулюе вугляводны абмен, знаходзяцца ва ўзаемазваротных адносінах. Такім чынам, лішак сьвятла і вугляводаў увечары парушае якасьць сну, а~вячэра ў~позьні час пагаршае засваеньне вугляводаў, што можа выклікаць мэтабалічныя парушэньні. У~рэшце рэшт, высокі інсулін можа зьнізіць узровень мэлятаніну і перашкодзіць яго выдзяленьню. А~зьніжэньне мэлятаніну й~працягласьці сну зь цягам часу зьнізіць адчувальнасьць да інсуліну.
+Важны гармон інсулін\index{інсулін} і начны гармон мэлятанін\index{мэлятанін} шчыльна ўзаемадзейнічаюць. У~норме ўзроўні гармону сну мэлятаніну і інсуліну, які рэгулюе вугляводны абмен, знаходзяцца ва ўзаемазваротных адносінах. Такім чынам, лішак сьвятла і вугляводаў увечары парушае якасьць сну, а~вячэра ў~позьні час пагаршае засваеньне вугляводаў, што можа выклікаць мэтабалічныя парушэньні. У~рэшце рэшт, высокі інсулін можа зьнізіць узровень мэлятаніну і перашкодзіць яго выдзяленьню. А~зьніжэньне мэлятаніну\index{мэлятанін} й~працягласьці сну зь цягам часу зьнізіць адчувальнасьць да інсуліну\index{інсулін}.
 
-\paragraph{Адчувальнасьць да інсуліну.}
-Добрая адчувальнасьць да інсуліну зьвязаная з~мацнейшым здароўем. У~чалавека адчувальнасьць да інсуліну рэгулюецца цыркадным рытмам, зьмяншаючыся ўвечары і ноччу. Гэты працэс зьвязаны ня толькі з~нашым цэнтральным гадзіньнікам, супрахіязматычным ядром гіпаталямусу, але й~з~гадзіньнікамі печані, цягліцаў, падстраўніцы (падстраўнікавай залозы) і тлушчавай тканкі. Раніцай і ў~другой палове дня інсулінарэзыстэнтнасьць мінімальная, але ўвечары зьніжаецца адчувальнасьць і тлушчавых, і цягліцавых тканак і печані да інсуліну. Тыя, хто зьядаў траціну ці больш содневага рацыёну пасьля 18-й, мелі больш высокія ўзроўні глюкозы і глікіраванага гемаглабіну (маркер глікемічнага кантролю) у~крыві, больш высокі інсулін і вышэйшую рызыку дыябэту і павышанага артэрыяльнага ціску.
+\paragraph{Адчувальнасьць да інсуліну\index{інсулін}.}
+Добрая адчувальнасьць да інсуліну зьвязаная з~мацнейшым здароўем. У~чалавека адчувальнасьць да інсуліну рэгулюецца цыркадным рытмам, зьмяншаючыся ўвечары і ноччу. Гэты працэс зьвязаны ня толькі з~нашым цэнтральным гадзіньнікам, супрахіязматычным ядром гіпаталямусу\index{гіпаталямус}, але й~з~гадзіньнікамі печані, цягліцаў, падстраўніцы (падстраўнікавай залозы) і тлушчавай тканкі. Раніцай і ў~другой палове дня інсулінарэзыстэнтнасьць мінімальная, але ўвечары зьніжаецца адчувальнасьць і тлушчавых, і цягліцавых тканак і печані да інсуліну. Тыя, хто зьядаў траціну ці больш содневага рацыёну пасьля 18-й, мелі больш высокія ўзроўні глюкозы і глікіраванага гемаглабіну (маркер глікемічнага кантролю) у~крыві, больш высокі інсулін\index{інсулін} і вышэйшую рызыку дыябэту\index{дыябэт} і павышанага артэрыяльнага ціску.
 
-Спалучэньне сытнага сьняданку і лёгкай вячэры дапамагае лепей кантраляваць узровень глюкозы ў~крыві ў~параўнаньні са спалучэньнем «лёгкі сьняданак~--- сытная вячэра», розьніца ўзроўняў інсуліну і глюкозы ў~эксьперымэнтальных групах складала 20\,\%.
+Спалучэньне сытнага сьняданку і лёгкай вячэры дапамагае лепей кантраляваць узровень глюкозы ў~крыві ў~параўнаньні са спалучэньнем «лёгкі сьняданак~--- сытная вячэра», розьніца ўзроўняў інсуліну\index{інсулін} і глюкозы ў~эксьперымэнтальных групах складала 20\,\%.
 
 \paragraph{Сыстэмнае запаленьне і пухліны.}
-Чым вышэйшы ўзровень інсуліну і сыстэмнага запаленьня, тым большая рызыка раку. Навукоўцы высьветлілі, што позьняя ежа ўвечары павялічвае рызыку раку малочнай залозы. Кожныя тры гадзіны, што мы не ямо да ночы, на 20\,\% зьніжаюць узровень глікіраванага гемаглабіну. І~наадварот, кожныя 10\,\% калёрыяў, зьедзеных пасьля 17-й, павялічваюць узровень запаленьня (ультраадчувальны C-рэактыўны бялок) на 3\,\%.
+Чым вышэйшы ўзровень інсуліну і сыстэмнага запаленьня, тым большая рызыка раку. Навукоўцы высьветлілі, што позьняя ежа ўвечары павялічвае рызыку раку малочнай залозы. Кожныя тры гадзіны, што мы не ямо да ночы, на 20\,\% зьніжаюць узровень глікіраванага гемаглабіну. І~наадварот, кожныя 10\,\% калёрыяў, зьедзеных пасьля 17-й, павялічваюць узровень запаленьня (ультраадчувальны C-рэактыўны бялок\index{C-рэактыўны бялок}) на 3\,\%.
 
 \paragraph{Іншыя праблемы і хваробы.}
-Звычка есьці позна небясьпечная рызыкай атлусьценьня, саркапэніі (страта колькасьці цягліц), парушэньняў харчовых паводзінаў, дэпрэсіі, трывожных разладаў. Але раньняе харчовае вакно зьніжае ўзровень акісьляльнага стрэсу і прыводзіць да зьніжэньня вечаровага апэтыту! Яда на ноч пагаршае працу самататропнага гармону (СTГ), зьвязанага з~начной аўтафагіяй (самаачышчэньне клетак). Чым больш ежы ноччу, тым горшыя сон і аднаўленьне.
+Звычка есьці позна небясьпечная рызыкай атлусьценьня, саркапэніі (страта колькасьці цягліц), парушэньняў харчовых паводзінаў, дэпрэсіі, трывожных разладаў. Але раньняе харчовае вакно зьніжае ўзровень акісьляльнага стрэсу і прыводзіць да зьніжэньня вечаровага апэтыту! Яда на ноч пагаршае працу самататропнага гармону (СTГ)\index{самататропны гармон (СTГ)}, зьвязанага з~начной аўтафагіяй\index{аўтафагія} (самаачышчэньне клетак). Чым больш ежы ноччу, тым горшыя сон і аднаўленьне.
 
 \subsection{Асноўныя прынцыпы}
 
 \paragraph{Перасуньце харчовае вакно на дзённы час.}
-Харчовае вакно, ссунутае на больш раньнія гадзіны, карыснае для здароўя, бо сынхранізуе наш графік харчаваньня і содневыя біярытмы. Аптымальна есьці ў~той час, калі ў~нашай крыві высокі ўзровень гармону актыўнасьці й~стрэсу картызолу і самы нізкі начнога гармону мэлятаніну. Зрушваючы харчовае вакно, мы сынхранізуем нашыя цыркадныя рытмы, лепей кантралюем апэтыт і голад. На сьветлы час дня прыпадае найлепшая адчувальнасьць нашага арганізму да інсуліну, таму ежа аптымальней засвойваецца, а~рызыка атлусьценьня ды іншых праблемаў са здароўем памяншаецца.
+Харчовае вакно, ссунутае на больш раньнія гадзіны, карыснае для здароўя, бо сынхранізуе наш графік харчаваньня і содневыя біярытмы. Аптымальна есьці ў~той час, калі ў~нашай крыві высокі ўзровень гармону актыўнасьці й~стрэсу картызолу і самы нізкі начнога гармону мэлятаніну\index{мэлятанін}. Зрушваючы харчовае вакно, мы сынхранізуем нашыя цыркадныя рытмы, лепей кантралюем апэтыт і голад. На сьветлы час дня прыпадае найлепшая адчувальнасьць нашага арганізму да інсуліну\index{інсулін}, таму ежа аптымальней засвойваецца, а~рызыка атлусьценьня ды іншых праблемаў са здароўем памяншаецца.
 
 Гэты мэтад называецца па-рознаму: напрыклад, early Time-Restricted Feeding (еTRF)~--- раньняе кармленьне з~часавым абмежаваньнем. Падобны зрух харчовага вакна таксама выкарыстоўваецца і ў~некаторых традыцыйных практыках для падтрыманьня яснасьці розуму, таму будысцкім манахам дазваляецца есьці толькі да 12-й дня.
 
@@ -39,7 +39,7 @@
 Некаторыя людзі маюць звычку піць кефір альбо малако для моцнага сну і г.~д. Гэтага трэба пазьбягаць: ніякай яды ноччу.
 
 \paragraph{Перагрупоўка каляражу.}
-Захоўваючы ранейшы рэжым харчаваньня, пачніце разгружаць вячэру і павялічваць каляраж і аб'ём сьняданку і абеду. Для многіх людзей менавіта вячэра зьяўляецца самай сытнай ядой, таму захавайце яе аб'ём дзеля падтрымкі сытасьці ды зьменшыце каляраж. Для гэтага дадайце больш прадуктаў зь нізкай адноснай калярыйнай шчыльнасьцю: зеляніна, сырая і вараная гародніна. Дадавайце тлушчы, каб стымуляваць выдзяленьне гармону халецыстакініну, што падтрымлівае адчуваньне сытасьці. Для некаторых людзей наедным можа быць і бялок, але калі вы кепска сьпіце, то яго трэба пазьбягаць на вячэру. Дасьледаваньні паказалі, што зрушэньне каляражу зь вячэры на сьняданак з~захаваньнем часу яды~--- цалкам эфэктыўная стратэгія.
+Захоўваючы ранейшы рэжым харчаваньня, пачніце разгружаць вячэру і павялічваць каляраж і аб'ём сьняданку і абеду. Для многіх людзей менавіта вячэра зьяўляецца самай сытнай ядой, таму захавайце яе аб'ём дзеля падтрымкі сытасьці ды зьменшыце каляраж. Для гэтага дадайце больш прадуктаў зь нізкай адноснай калярыйнай шчыльнасьцю: зеляніна, сырая і вараная гародніна. Дадавайце тлушчы, каб стымуляваць выдзяленьне гармону халецыстакініну\index{халецыстакінін}, што падтрымлівае адчуваньне сытасьці. Для некаторых людзей наедным можа быць і бялок, але калі вы кепска сьпіце, то яго трэба пазьбягаць на вячэру. Дасьледаваньні паказалі, што зрушэньне каляражу зь вячэры на сьняданак з~захаваньнем часу яды~--- цалкам эфэктыўная стратэгія.
 
 \paragraph{Непасрэдны зрух харчовага вакна.}
 Сынхронна на паўгадзіны ці гадзіну зрушце на больш раньні час сьняданак і вячэру. Пры гэтым не імкніцеся да крайнасьці, зрух нават на гадзіну можа быць карысны і палепшыць якасьць сну. Для нас агульнай мэтай стане плыўны зрух і эвалюцыя вашага рэжыму ў~наступнай пасьлядоўнасьці:
@@ -80,4 +80,4 @@
 Часта на пераяданьне ўвечары нас падштурхоўвае жаданьне атрымаць больш задавальненьня пасьля бязрадаснага дня. Таму абавязкова плянуйце сабе як мінімум адно асабістае задавальненьне на кожны вечар~--- і гэта адцягне вас ад ежы.
 
 \paragraph{Калі такі ясьцё вячэру позна.}
-У ідэале ежце нешта сырое зь вялікай колькасьцю клятчаткі, напрыклад пагрызіце моркву. Працэс дбайнага жаваньня здольны аслабіць стрэс і паменшыць голад. Сырыя расьлінныя прадукты (за выключэньнем садавіны) зь невялікай колькасьцю тлушчу будуць мець мінімальны нэгатыўны эфэкт, нават зьедзеныя позна ўвечары.
+У ідэале ежце нешта сырое зь вялікай колькасьцю клятчаткі\index{клятчатка}, напрыклад пагрызіце моркву. Працэс дбайнага жаваньня здольны аслабіць стрэс і паменшыць голад. Сырыя расьлінныя прадукты (за выключэньнем садавіны) зь невялікай колькасьцю тлушчу будуць мець мінімальны нэгатыўны эфэкт, нават зьедзеныя позна ўвечары.
