--- a/nutrition/chapter4.tex
+++ b/nutrition/chapter4.tex
@@ -12,13 +12,13 @@
 \subsection{Як гэта ўплывае на здароўе?}
 
 \paragraph{Сардэчна-сасудзістыя захворваньні.}
-Навуковыя дасьледаваньні пацьвердзілі, што рэгулярны сьняданак станоўча ўплывае на здароўе сардэчна-сасудзістай сыстэмы і зьніжае рызыку многіх захворваньняў. Адсутнасьць сьняданку прыводзіць да парушэньня ліпіднага профілю крыві, павелічэньня атэрасклератычнай паразы сасудаў. Агульная колькасьць атэрасклератычных бляшак у~паўтара разы вышэйшая ў~тых, хто прапускае сьняданак. Акрамя таго, павялічваецца рызыка сардэчнага прыступу ды ішэміі сэрца са сьмяротным вынікам.
+Навуковыя дасьледаваньні пацьвердзілі, што рэгулярны сьняданак станоўча ўплывае на здароўе сардэчна-сасудзістай сыстэмы і зьніжае рызыку многіх захворваньняў. Адсутнасьць сьняданку прыводзіць да парушэньня ліпіднага профілю крыві, павелічэньня атэрасклератычнай паразы сасудаў\index{атэрасклератычная параза сасудаў}. Агульная колькасьць атэрасклератычных бляшак у~паўтара разы вышэйшая ў~тых, хто прапускае сьняданак. Акрамя таго, павялічваецца рызыка сардэчнага прыступу ды ішэміі сэрца са сьмяротным вынікам.
 
-\paragraph{Атлусьценьне і цукровы дыябэт.}
-Сьняданак зьніжае рызыку мэтабалічнага сындрому (атлусьценьне, дыябэт, гіпэртэнзія і да т.~п.). Большасьць людзей, якія пакутуюць на атлусьценьне, ня маюць звычкі сьнедаць або зьядаюць за сьняданкам вельмі мала. Тыя, хто рэгулярна сьнедае, маюць на 30\,\% меншую імавернасьць атлусьценьня і ў~два разы зьніжаюць рызыку цукровага дыябэту.
+\paragraph{Атлусьценьне і цукровы дыябэт\index{дыябэт}.}
+Сьняданак зьніжае рызыку мэтабалічнага сындрому\index{мэтабалічны сындром} (атлусьценьне, дыябэт, гіпэртэнзія і да т.~п.). Большасьць людзей, якія пакутуюць на атлусьценьне, ня маюць звычкі сьнедаць або зьядаюць за сьняданкам вельмі мала. Тыя, хто рэгулярна сьнедае, маюць на 30\,\% меншую імавернасьць атлусьценьня і ў~два разы зьніжаюць рызыку цукровага дыябэту\index{дыябэт}.
 
-\paragraph{Фэртыльнасьць.}
-Сьняданак уплывае нават на разьвіцьцё захворваньняў, якія на першы погляд складана зьвязаць з~харчаваньнем. Напрыклад, на полікістоз яечнікаў, што ўзьнікае ў~сувязі з~інсулінарэзыстэнтнасьцю. Сытны сьняданак і нізкакалярыйная вячэра дапамагаюць павысіць адчувальнасьць да інсуліну і палепшыць гарманальны профіль, падвышаючы шанцы на зачацьце.
+\paragraph{Фэртыльнасьць\index{фэртыльнасьць}.}
+Сьняданак уплывае нават на разьвіцьцё захворваньняў, якія на першы погляд складана зьвязаць з~харчаваньнем. Напрыклад, на полікістоз яечнікаў\index{полікістоз яечнікаў}, што ўзьнікае ў~сувязі з~інсулінарэзыстэнтнасьцю\index{інсулінарэзыстэнтнасьць}. Сытны сьняданак і нізкакалярыйная вячэра дапамагаюць павысіць адчувальнасьць да інсуліну і палепшыць гарманальны профіль, падвышаючы шанцы на зачацьце.
 
 \paragraph{Сыстэма «голад~--- сытасьць».}
 Адсутнасьць сьняданку прыводзіць да парушэньня насычэньня і паніжанага кантролю голаду на працягу ўсяго дня. Навукоўцы высьветлілі, што маладыя людзі, якія прапускаюць сьняданак, зьядаюць на 40\,\% больш прысмакаў цягам дня.
@@ -26,12 +26,12 @@
 \tipbox{Спалучэньне сьняданку зь яркім сонечным сьвятлом, фізычнай актыўнасьцю і прыемным абуджэньнем~--- гарантыя добрага пачатку дня.}
 
 \paragraph{Прадуктыўнасьць, стрэс.}
-Рэгулярны сьняданак спрыяе паляпшэньню канцэнтрацыі ўвагі, стабілізуе ўзровень цукру ў~крыві. IQ дзяцей, якія рэгулярна сьнедаюць, вышэйшае. Пры адсутнасьці сьняданку зьмяншаецца наша стрэсаўстойлівасьць, бо раніцай самы высокі ўзровень картызолу, што на тле адсутнасьці ежы павялічвае рызыку разбурэньня цягліц і назапашваньня тлушчу.
+Рэгулярны сьняданак спрыяе паляпшэньню канцэнтрацыі ўвагі, стабілізуе ўзровень цукру ў~крыві. IQ дзяцей, якія рэгулярна сьнедаюць, вышэйшае. Пры адсутнасьці сьняданку зьмяншаецца наша стрэсаўстойлівасьць, бо раніцай самы высокі ўзровень картызолу\index{картызол}, што на тле адсутнасьці ежы павялічвае рызыку разбурэньня цягліц і назапашваньня тлушчу.
 
 \subsection{Асноўныя прынцыпы}
 
 Здаровы сьняданак~--- гэта рэгулярны, сытны, высокабялковы раньні сьняданак пры дастатковым узроўні асьвятленьня.
-Такі сьняданак спрыяе спаленьню тлушчу, пры гэтым мацней выдаткоўваецца менавіта вісцэральны тлушч, а~не падскурны (інтэнсіўней зьніжаецца ахоп таліі). Сьняданак дапамагае кантраляваць узровень грэліну, таму вы пачуваецеся сытым на працягу ўсяго дня. Сьняданак стабілізуе ваганьні цукру ў~крыві, паляпшае настрой і прадуктыўнасьць. Спалучэньне сьняданку зь яркім сьвятлом, фізычнай актыўнасьцю і прыемным абуджэньнем зьяўляецца гарантыяй добрага пачатку дня. Бо менавіта раніца крытычна важная для нашага здароўя: яна дазваляе перазагрузіць, наладзіць і сынхранізаваць працу цыркадных рытмаў.
+Такі сьняданак спрыяе спаленьню тлушчу, пры гэтым мацней выдаткоўваецца менавіта вісцэральны тлушч, а~не падскурны (інтэнсіўней зьніжаецца ахоп таліі). Сьняданак дапамагае кантраляваць узровень грэліну, таму вы пачуваецеся сытым на працягу ўсяго дня. Сьняданак стабілізуе ваганьні цукру ў~крыві, паляпшае настрой і прадуктыўнасьць. Спалучэньне сьняданку зь яркім сьвятлом, фізычнай актыўнасьцю і прыемным абуджэньнем зьяўляецца гарантыяй добрага пачатку дня. Бо менавіта раніца крытычна важная для нашага здароўя: яна дазваляе перазагрузіць, наладзіць і сынхранізаваць працу цыркадных рытмаў\index{цыркадныя рытмы}.
 
 \paragraph{Высокабялковы сьняданак.}
 Высокабялковыя прадукты на сьняданак засвойваюцца і насычаюць лепей, чым у~любы іншы прыём ежы. Так, сньяданак з~двух яйкаў паказаў сябе лепш, чым аналягічная па калёрыях колькасьць вугляводаў. Пасьля сьняданку з~падвышанай колькасьцю бялку моладзь ела на вячэру на 200\,ккал менш, а~на працягу дня не адчувала жаданьня чым-небудзь перакусіць. Сьняданак павінен утрымоўваць 50--80 грамаў якаснага бялку і дастатковую колькасьць тлушчаў. Вугляводы на сьняданак павінны складаць меншую долю калёрыяў, кашу варта замяніць гароднінай.
@@ -42,10 +42,10 @@
 \paragraph{Раньні сьняданак.}
 Сьнедаць трэба ў~першую гадзіну пасьля абуджэньня. Каб пасьпяваць, вы мусіце прыгатаваць усё зь вечара. Прачнуліся~--- уключайце пліту і займайцеся ранішнімі справамі.
 
-\tipbox{Паўгадзіны сонечнага сьвятла раніцай~--- гэта навукова абгрунтаваная, эфэктыўная працэдура для здаровай працы цыркадных рытмаў. Зімой можна сьнедаць з~уключанымі яркімі лямпамі для фотатэрапіі.}
+\tipbox{Паўгадзіны сонечнага сьвятла раніцай~--- гэта навукова абгрунтаваная, эфэктыўная працэдура для здаровай працы цыркадных рытмаў\index{цыркадныя рытмы}. Зімой можна сьнедаць з~уключанымі яркімі лямпамі для фотатэрапіі.}
 
 \paragraph{Яркі сьняданак.}
-З самае раніцы трэба ўключаць яркае сьвятло, якое зьнізіць узровень мэлятаніну і картызолу. Ранішняе сьвятло павялічвае адчувальнасьць да інсуліну і, як вынік, спрыяе пахудзеньню. Сонечнае сьвятло палепшыць настрой і павялічыць выпрацоўку дафаміну, бо дафамінавыя нэўроны ёсьць і ў~сятчатцы вока, дзе ўтвараюць асаблівую рэтына-дафамінавую сыстэму. Паўгадзіны сонечнага сьвятла раніцай~--- гэта навукова абгрунтаваная, эфэктыўная працэдура для здаровай працы цыркадных рытмаў. Зімой можна сьнедаць з~уключанымі яркімі лямпамі для фотатэрапіі.
+З самае раніцы трэба ўключаць яркае сьвятло, якое зьнізіць узровень мэлятаніну\index{мэлятанін} і картызолу\index{картызол}. Ранішняе сьвятло павялічвае адчувальнасьць да інсуліну і, як вынік, спрыяе пахудзеньню. Сонечнае сьвятло палепшыць настрой і павялічыць выпрацоўку дафаміну\index{дафамін}, бо дафамінавыя нэўроны ёсьць і ў~сятчатцы вока, дзе ўтвараюць асаблівую рэтына-дафамінавую сыстэму. Паўгадзіны сонечнага сьвятла раніцай~--- гэта навукова абгрунтаваная, эфэктыўная працэдура для здаровай працы цыркадных рытмаў\index{цыркадныя рытмы}. Зімой можна сьнедаць з~уключанымі яркімі лямпамі для фотатэрапіі.
 
 \subsection{Як трымацца правіла? Ідэі і парады}
 
