--- a/nutrition/chapter5.tex
+++ b/nutrition/chapter5.tex
@@ -1,8 +1,8 @@
 \chapter{Вячэра}
 
-Вечар~--- гэта важная частка нашых цыркадных рытмаў. Добрая вячэра і якасны сон забясьпечваюць паўнавартаснае аднаўленьне арганізму ўначы. Вячэрнія пераяданьні, начныя перакусы, празьмерны стрэс, лішак сьвятла і стымуляцыі парушаюць вячэрні спакой, структуру сну і яго працягласьць. Чалавек часам сьпіць столькі ж, але аднаўляецца горай. Чым горшы сон, тым горшая работа мэтабалізму, сыстэмы «голад~--- сытасьць», слабейшы самакантроль. Вячэрайце лёгка, рана і правільна~--- гэта падмурак паўнавартаснага сну і здароўя!
+Вечар~--- гэта важная частка нашых цыркадных рытмаў\index{цыркадныя рытмы}. Добрая вячэра і якасны сон забясьпечваюць паўнавартаснае аднаўленьне арганізму ўначы. Вячэрнія пераяданьні, начныя перакусы, празьмерны стрэс, лішак сьвятла і стымуляцыі парушаюць вячэрні спакой, структуру сну і яго працягласьць. Чалавек часам сьпіць столькі ж, але аднаўляецца горай. Чым горшы сон, тым горшая работа мэтабалізму, сыстэмы «голад~--- сытасьць», слабейшы самакантроль. Вячэрайце лёгка, рана і правільна~--- гэта падмурак паўнавартаснага сну і здароўя!
 
-На прыкладзе сваіх пацыентаў я бачу, што вечар~--- гэта ўразьлівае месца для многіх людзей. Чаму? Яны ня ўлічваюць стрэс і парушэньні сьветлавога рэжыму. Прывяду прыклад. Ёсьць такая глыбакаводная і вельмі страшная на выгляд рыба~--- марскі д'ябал. У~яе ёсьць нарост на галаве~--- «вуда»,~--- які сьвеціцца ў~цёмнай глыбокай вадзе. Прывабленыя сьвятлом рыбы падплываюць і трапляюць проста ў~пашчу марскога д'ябла. Так і ў~нас залішняе сьвятло і стымуляцыя ўвечары зьбіваюць цыркадныя рытмы, прымушаюць думаць, што цяпер дзень, прыліпаць да экранаў ды шмат і сытна есьці ўвечары. Не трапляйце ў~сьветлавую пастку!
+На прыкладзе сваіх пацыентаў я бачу, што вечар~--- гэта ўразьлівае месца для многіх людзей. Чаму? Яны ня ўлічваюць стрэс і парушэньні сьветлавога рэжыму. Прывяду прыклад. Ёсьць такая глыбакаводная і вельмі страшная на выгляд рыба~--- марскі д'ябал. У~яе ёсьць нарост на галаве~--- «вуда»,~--- які сьвеціцца ў~цёмнай глыбокай вадзе. Прывабленыя сьвятлом рыбы падплываюць і трапляюць проста ў~пашчу марскога д'ябла. Так і ў~нас залішняе сьвятло і стымуляцыя ўвечары зьбіваюць цыркадныя рытмы\index{цыркадныя рытмы}, прымушаюць думаць, што цяпер дзень, прыліпаць да экранаў ды шмат і сытна есьці ўвечары. Не трапляйце ў~сьветлавую пастку!
 
 \subsection{Як зьявілася праблема?}
 
@@ -10,11 +10,11 @@
 
 \tipbox{Велізарная колькасьць сьвятлодыёдных выпраменьваньняў з~высокаю доляй сьвятла сіняга спэктру (тэлефоны, кампутары, пляншэты, тэлевізары, сьвятлодыёдныя лямпы і інш.) зьбіваюць нашы ўнутраныя гадзіньнікі. Сьвятло такога спэктру дае сыгнал аб тым, што цяпер дзень, і абвастрае пачуцьцё голаду.}
 
-\paragraph{Цыркадная гіпэрфагія (пераяданьне).}
-Пытаньне вячэрняга харчаваньня і вячэры шчыльна зьвязана з~работай нашых цыркадных біярытмаў. Велізарная колькасьць сьвятлодыёдных выпраменьваньняў з~высокаю доляй сьвятла сіняга спэктру (тэлефоны, кампутары, пляншэты, тэлевізары, сьвятлодыёдныя лямпы і інш.) зьбіваюць нашы ўнутраныя гадзіньнікі. Сьвятло такога спэктру дае сыгнал аб тым, што цяпер дзень, і абвастрае пачуцьцё голаду.
+\paragraph{Цыркадная гіпэрфагія (пераяданьне)\index{цыркадная гіперфагія}.}
+Пытаньне вячэрняга харчаваньня і вячэры шчыльна зьвязана з~работай нашых цыркадных біярытмаў\index{цыркадныя рытмы}. Велізарная колькасьць сьвятлодыёдных выпраменьваньняў з~высокаю доляй сьвятла сіняга спэктру (тэлефоны, кампутары, пляншэты, тэлевізары, сьвятлодыёдныя лямпы і інш.) зьбіваюць нашы ўнутраныя гадзіньнікі. Сьвятло такога спэктру дае сыгнал аб тым, што цяпер дзень, і абвастрае пачуцьцё голаду.
 
-\paragraph{Гіперфагія і эпідэмія стрэсу.}
-Хранічны стрэс становіцца распаўсюджанай зьявай. Калі востры стрэс часьцей прытупляе апэтыт, то хранічны~--- наадварот, узмацняе з~прычыны падвышанай выпрацоўкі грэліну. Стомленасьць і голад на глебе стрэсу павялічваюцца ўвечары, што прыводзіць да пераяданьня. Больш за тое, грэлін узбуджае нэрвовую сыстэму, таму людзі вымушаныя есьці для таго, каб заснуць, выкарыстоўваючы ежу як снатворнае. Злоўжываньне кафеінам і алькаголем таксама пагаршае разлады прыёму ежы.
+\paragraph{Гіперфагія\index{гіперфагія} і эпідэмія стрэсу.}
+Хранічны стрэс становіцца распаўсюджанай зьявай. Калі востры стрэс часьцей прытупляе апэтыт, то хранічны~--- наадварот, узмацняе з~прычыны падвышанай выпрацоўкі грэліну\index{грэлін}. Стомленасьць і голад на глебе стрэсу павялічваюцца ўвечары, што прыводзіць да пераяданьня. Больш за тое, грэлін\index{грэлін} узбуджае нэрвовую сыстэму, таму людзі вымушаныя есьці для таго, каб заснуць, выкарыстоўваючы ежу як снатворнае. Злоўжываньне кафеінам\index{кафеін} і алькаголем\index{алькаголь} таксама пагаршае разлады прыёму ежы.
 
 \paragraph{Геданічная гіпэрфагія} (імкненьне есьці дзеля атрыманьня задавальненьня пры адсутнасьці дэфіцыту энэргіі).
 Акрамя стрэсу, існуе і сындром дэфіцыту задаволенасьці, калі назіраецца зьніжэньне здольнасьці атрымліваць задавальненьне ад жыцьця. Такія людзі ядуць, бо ім сумна, тужліва, самотна, мала радасьцяў, і выбіраюць пры гэтым максымальна калярыйныя прадукты, нездаровыя спалучэньні мучнога, тлустага, салодкага, смажанага, салёнага і інш.
@@ -30,7 +30,7 @@
 
 Шэраг нэгатыўных узьдзеяньняў позьніх прыёмаў ежы разабраны ў~папярэднім разьдзеле. Мы адзначым, што існыя дасьледаваньні даюць далёка не заўсёды адназначны адказ. Па сутнасьці, калі лічыць колькасьць спажываных калёрыяў (што далёка не заўсёды рэальна ў~доўгатэрміновай пэрспэктыве), то ўплыў вячэры на структуру цела не такі вялікі. Так, ва ўмовах лёгкага дэфіцыту калёрыяў, харчаваньне раніцай і ўвечары на працягу 12 тыдняў не паўплывала на ўзровень тлушчу. Але большая колькасьць дасьледаваньняў знаходзіць сувязь паміж позьняй сытнай вячэрай і атлусьценьнем.
 
-Рэжым харчаваньня зьвязаны з~запаленьнем у~тлушчавай тканцы. Прыём ежы ўначы актывуе імунныя клеткі макрафагаў і выклікае большы запаленчы адказ у~тлушчавай тканцы ў~параўнаньні зь ядой удзень. Яда на ноч больш чым у~7 разоў павялічвае імавернасьць пякоткі ў~параўнаньні зь ядой за 3 гадзіны да сну. Існуюць дасьледаваньні, якія паказваюць, што позьнія прыёмы ежы зьніжаюць навучальнасьць і прыводзяць да парушэньняў работы гіпакампу.
+Рэжым харчаваньня зьвязаны з~запаленьнем у~тлушчавай тканцы. Прыём ежы ўначы актывуе імунныя клеткі макрафагаў і выклікае большы запаленчы адказ у~тлушчавай тканцы ў~параўнаньні зь ядой удзень. Яда на ноч больш чым у~7 разоў павялічвае імавернасьць пякоткі ў~параўнаньні зь ядой за 3 гадзіны да сну. Існуюць дасьледаваньні, якія паказваюць, што позьнія прыёмы ежы зьніжаюць навучальнасьць і прыводзяць да парушэньняў работы гіпакампу\index{гіпакамп}.
 
 Ёсьць і іншыя праблемы. Так, рызыка разьвіцьця ішэмічнай хваробы сэрца на 55\,\% вышэйшая ў~тых, хто есьць позна ноччу. Цікава, што рызыка разьвіцьця гарманальных парушэньняў, у~тым ліку раку грудзей і раку падкарэньнічнай залозы, таксама зьвязаная з~позьнімі прыёмамі ежы. Рызыка разьвіцьця раку малочнай залозы зьніжаецца на 16\,\%, а~раку падкарэньніцы~--- на 26\,\% у~тых, хто вячэрае мінімум за дзьве гадзіны да сну.
 
@@ -44,16 +44,16 @@
 
 Неабходна вячэраць як мінімум за 3--4 гадзіны да сну. Калярыйнасьць вячэры павінна складаць ад 20 да 30\,\% ад содневай калярыйнасьці. Аптымальныя прадукты~--- сярэдне-і нізкакрухмалістыя гародніна і зеляніна, карысныя тлушчы (сьметанковае масла, аліўкавы, какосавы алеі). Порцыя можа быць вялікай, і не забывайце ўжываць і сырую гародніну. Абмяжуйце выкарыстаньне крупаў, мучных вырабаў, паўфабрыкатаў і вялікай колькасьці бялковых прадуктаў.
 
-\tipbox{Аддайце перавагу таму, што ўтрымлівае больш клятчаткі: гародніна і зеляніна. Рафінаваныя вугляводы павялічваюць рызыку бессані, а~вось клятчатка на вячэру можа падоўжыць фазу павольнага сну!}
+\tipbox{Аддайце перавагу таму, што ўтрымлівае больш клятчаткі\index{клятчатка}: гародніна і зеляніна. Рафінаваныя вугляводы павялічваюць рызыку бессані, а~вось клятчатка\index{клятчатка} на вячэру можа падоўжыць фазу павольнага сну!}
 
 \paragraph{Раньняя вячэра.}
 Раньняя вячэра дапамагае павялічыць харчовую паўзу, а~акрамя таго, неўзаметку скарачае колькасьць калёрыяў. Навукоўцы давялі, што поўнае абмежаваньне яды з~7-й вечара да 6-й раніцы ў~здаровых людзей без абмежаваьньня каляражу прыводзіць да таго, што яны ў~сярэднім пачынаюць есьці менш на 240\,ккал у~содні! А~гэта ў~доўгатэрміновай пэрспэктыве дае дастаткова прыкметнае паніжэньне вагі! Раньняя вячэра спрыяе выпрацоўцы гармону росту, больш за 70\,\% колькасьці якога выдзяляецца ноччу. Гармон росту стымулюе рост цяглічнай тканкі і спальваньне тлушчу. Яда на ноч, у~сваю чаргу, спрыяе выдзяленьню інсуліну, які зьмяншае ўзровень гармону росту.
 
 \paragraph{Вугляводы.}
-Нягледзячы на тое, што вугляводы могуць даць прыемную дрымоту, ня варта на вячэру есьці крухмалістыя вугляводы, варта абмежаваць мучное і салодкае. Аддайце перавагу таму, што зьмяшчае больш клятчаткі,~--- гародніне і зеляніне. Рафінаваныя вугляводы павялічваюць рызыку бессані, а~вось клятчатка на вячэру можа падоўжыць фазу павольнага сну! Таму складаная салата~--- гэта выдатнае рашэньне! Навуковыя дасьледаваньні паказваюць, што цукар на вячэру выклікае павелічэньне эпізодаў мікраабуджэньня цягам ночы, што заўважна зьніжае якасьць сну.
+Нягледзячы на тое, што вугляводы могуць даць прыемную дрымоту, ня варта на вячэру есьці крухмалістыя вугляводы, варта абмежаваць мучное і салодкае. Аддайце перавагу таму, што зьмяшчае больш клятчаткі\index{клятчатка},~--- гародніне і зеляніне. Рафінаваныя вугляводы павялічваюць рызыку бессані, а~вось клятчатка\index{клятчатка} на вячэру можа падоўжыць фазу павольнага сну! Таму складаная салата~--- гэта выдатнае рашэньне! Навуковыя дасьледаваньні паказваюць, што цукар на вячэру выклікае павелічэньне эпізодаў мікраабуджэньня цягам ночы, што заўважна зьніжае якасьць сну.
 
 \paragraph{Тлушчы.}
-Тлушчы таксама зьяўляюцца важным кампанэнтам вячэры, але толькі ў~спалучэньні з~клятчаткай. Тлушчы не выклікаюць уздыму інсуліну, стымулююць выдзяленьне гармону халецістакініну, які дапамагае адчуваць сытасьць. Какосавы, аліўкавы алей, сьметанковае масла і да т.~п. будуць найлепшыя. Нават кавалачак сала пойдзе на карысьць. Таму сьмела запраўляйце гародніну тлушчамі, але захоўвайце пачуцьцё меры.
+Тлушчы таксама зьяўляюцца важным кампанэнтам вячэры, але толькі ў~спалучэньні з~клятчаткай\index{клятчатка}. Тлушчы не выклікаюць уздыму інсуліну, стымулююць выдзяленьне гармону халецістакініну, які дапамагае адчуваць сытасьць. Какосавы, аліўкавы алей, сьметанковае масла і да т.~п. будуць найлепшыя. Нават кавалачак сала пойдзе на карысьць. Таму сьмела запраўляйце гародніну тлушчамі, але захоўвайце пачуцьцё меры.
 
 \tipbox{Багацьце бялковай ежы не пасавацьме трывожным людзям з~праблемным засынаньнем. Але для тых, хто трэніруецца і моцна сьпіць, працуе дапазна, бялок на вячэру таксама можа быць прыдатным варыянтам.}
 
@@ -69,21 +69,21 @@
 Тэмпэратура таксама зьяўляецца важным сыгналам для нашага цела. Тэмпэратура нашага асяродку павінна зьніжацца прыкладна зь 19-й. Усё, што замінае нам «астыць», будзе замінаць расслабіцца і заснуць. Таму такія парады, як пагуляць перад сном, праветрыць спальню, паменшыць інтэнсіўнасьць апалу,~--- выдатна працуюць.
 
 \paragraph{Стрэс увечары.}
-Вячэрні стрэс~--- частая прычына страты кантролю над харчовымі паводзінамі і пераяданьня. Пры стрэсе нас цягне на тлустае, салодкае і салёнае. Гэта частка ахоўнай рэакцыі, бо наш арганізм успрымае стрэс як фізычную актыўнасьць («нападаю~--- уцякаю»), таму стымулюе нас папоўніць каляраж. Антыстрэсавыя тэхнікі выдатна памяншаюць апэтыт і спрыяюць глыбейшаму сну: цягліцавае паслабленьне, вядзеньне дзёньніка, глыбокае раўнамернае дыханьне, масажны кілімок з~іголкамі, фрырайтынг\footnote{Фрырайтынг (ці вольнае пісьмо)~--- тэхніка і методыка пісьма, якая дапамагае знайсьці неардынарныя рашэньні і ідэі, падобная з~мэтадам мазгавога штурму.}, ёга дапамагаюць палепшыць самаадчуваньне і зьнізіць узровень стрэсу, а~адпаведна і апэтыту. Усе працэдуры, накіраваныя на цела, павялічваюць выпрацоўку антыстрэсавага гармону аксытацыну: водныя працэдуры, масаж, расьціраньні, саўна, самамасаж і да т.~п.
+Вячэрні стрэс~--- частая прычына страты кантролю над харчовымі паводзінамі і пераяданьня. Пры стрэсе нас цягне на тлустае, салодкае і салёнае. Гэта частка ахоўнай рэакцыі, бо наш арганізм успрымае стрэс як фізычную актыўнасьць («нападаю~--- уцякаю»), таму стымулюе нас папоўніць каляраж. Антыстрэсавыя тэхнікі выдатна памяншаюць апэтыт і спрыяюць глыбейшаму сну: цягліцавае паслабленьне, вядзеньне дзёньніка, глыбокае раўнамернае дыханьне, масажны кілімок з~іголкамі, фрырайтынг\index{фрырайтынг}\footnote{Фрырайтынг (ці вольнае пісьмо)~--- тэхніка і методыка пісьма, якая дапамагае знайсьці неардынарныя рашэньні і ідэі, падобная з~мэтадам мазгавога штурму.}, ёга дапамагаюць палепшыць самаадчуваньне і зьнізіць узровень стрэсу, а~адпаведна і апэтыту. Усе працэдуры, накіраваныя на цела, павялічваюць выпрацоўку антыстрэсавага гармону аксытацыну\index{аксытацын}: водныя працэдуры, масаж, расьціраньні, саўна, самамасаж і да т.~п.
 
-\paragraph{Кафеін.}
-Кафеін утрымліваецца ня толькі ў~каве, але і ў~гарбаце, шматлікіх напоях, батончыках і леках. Яго сярэдні пэрыяд паўраспаду складае 4--5 гадзінаў, але дзеяньне можа адчувацца і ўсе восем гадзінаў. Таму калі вы хочаце пазьбегнуць узьдзеяньня кафеіну на сон, то ня варта ўжываць каву, гарбату ды іншыя кафеінавыя напоі пасьля 12:00–14:00 гадзінаў. Навукоўцы высьветлілі, што кафеін ссоўвае біярытмы на больш позьні час, скарачае час павольнага сну. Залішняе ўжываньне кафеіну прыводзіць да парушэньня сну і зьяўленьня ранішняй стомленасьці. Ёсьць людзі, генэтычна вельмі адчувальныя да кафеіну,~--- у~іх ён выклікае трывогу і ўзмацняе нэўроз. Такім людзям абмежаваньне кафеіну вельмі станоўча адаб'ецца на здароўе.
+\paragraph{Кафеін\index{кафеін}.}
+Кафеін\index{кафеін} утрымліваецца ня толькі ў~каве, але і ў~гарбаце, шматлікіх напоях, батончыках і леках. Яго сярэдні пэрыяд паўраспаду складае 4--5 гадзінаў, але дзеяньне можа адчувацца і ўсе восем гадзінаў. Таму калі вы хочаце пазьбегнуць узьдзеяньня кафеіну на сон, то ня варта ўжываць каву, гарбату ды іншыя кафеінавыя напоі пасьля 12:00–14:00 гадзінаў. Навукоўцы высьветлілі, што кафеін ссоўвае біярытмы на больш позьні час, скарачае час павольнага сну. Залішняе ўжываньне кафеіну прыводзіць да парушэньня сну і зьяўленьня ранішняй стомленасьці. Ёсьць людзі, генэтычна вельмі адчувальныя да кафеіну,~--- у~іх ён выклікае трывогу і ўзмацняе нэўроз. Такім людзям абмежаваньне кафеіну\index{кафеін} вельмі станоўча адаб'ецца на здароўе.
 
-\tipbox{Сярэдні пэрыяд кафеіну паўраспаду складае 4--5 гадзінаў, але дзеяньне можа адчувацца і ўсе восем гадзінаў. Таму калі вы хочаце пазьбегнуць узьдзеяньня кафеіну на сон, то ня варта ўжываць каву, гарбату ды іншыя кафеінавыя напоі пасьля 12:00–14:00 гадзінаў.}
+\tipbox{Сярэдні пэрыяд кафеіну\index{кафеін} паўраспаду складае 4--5 гадзінаў, але дзеяньне можа адчувацца і ўсе восем гадзінаў. Таму калі вы хочаце пазьбегнуць узьдзеяньня кафеіну\index{кафеін} на сон, то ня варта ўжываць каву, гарбату ды іншыя кафеінавыя напоі пасьля 12:00–14:00 гадзінаў.}
 
-\paragraph{Алькаголь.}
-Алькаголь~--- вельмі калярыйны прадукт. Ён хоць і паскарае засынаньне, але зьмяншае якасьць сну, асабліва ў~другой палове ночы, узмацняе храп, выклікае абязводжваньне, пры працяглым ужываньні можа выклікаць бессань. Кладзіцеся спаць цьвярозымі.
+\paragraph{Алькаголь\index{алькаголь}.}
+Алькаголь\index{алькаголь}~--- вельмі калярыйны прадукт. Ён хоць і паскарае засынаньне, але зьмяншае якасьць сну, асабліва ў~другой палове ночы, узмацняе храп, выклікае абязводжваньне\index{абязводжваньне}, пры працяглым ужываньні можа выклікаць бессань. Кладзіцеся спаць цьвярозымі.
 
 \paragraph{Ніякіх паўфабрыкатаў і гатовай ежы.}
 Яны ўтрымліваюць вялікую колькасьць цукру, солі і ўзмацняльнікаў смаку. Салёныя прадукты на вячэру прывядуць да затрымкі вадкасьці і да таго, што вы будзеце выглядаць раніцай горш.
 
-\paragraph{Менш тыраміну.}
-На вячэру ня варта есьці прадукты, якія ўтрымліваюць шмат біягенных амінаў, напрыклад тыраміну. Яны ўзмацняюць выдзяленьне адрэналіну і пагаршаюць сон. Тырамін ёсьць у~чакалядзе, віне, соўсах, сырах і шэрагу бялковых і малочных паўфабрыкатаў.
+\paragraph{Менш тыраміну\index{тырамін}.}
+На вячэру ня варта есьці прадукты, якія ўтрымліваюць шмат біягенных амінаў\index{біягенныя аміны}, напрыклад тыраміну. Яны ўзмацняюць выдзяленьне адрэналіну і пагаршаюць сон. Тырамін\index{тырамін} ёсьць у~чакалядзе, віне, соўсах, сырах і шэрагу бялковых і малочных паўфабрыкатаў.
 
 \paragraph{Задавальненьне ўвечары.}
 Плянуйце прыемнае на вечар загадзя і рабіце гэта, нават калі ня хочацца. Такі прынцып ляжыць у~аснове мэтаду паводзіннай актывацыі, вельмі эфэктыўнай пры дэпрэсіі. Тут пасуе хобі, камунікацыя з~роднымі і сябрамі, любое некалярыйнае задавальненьне. Калі мы стамляемся, то можам адмаўляцца ад зносінаў, значных для нас справаў. Але ж калі мозг пазбаўляецца эмацыйнага падсілкоўваньня, ён шукае спосабы папоўніць яго дэфіцыт~--- і знаходзіць у~ежы! Са свайго досьведу я бачу, што вячэрні голад вельмі часта мае эмацыйныя карані.
