--- a/nutrition/chapter6.tex
+++ b/nutrition/chapter6.tex
@@ -18,7 +18,7 @@
 
 Чаму так адбываецца? Як звычайна, уся справа ў~калёрыях і звычках. Нам цяжка сьвядома кантраляваць дакладнае спажываньне калёрыяў гадамі. Стрэсы, перагрузка, стомленасьць прыводзяць да зьніжэньня сьвядомага кантролю, і наша харчаваньне пераходзіць пад кантроль звычак. Сілкуючыся 5--6 разоў на дзень, мы павялічваем імавернасьць пераяданьня ў~параўнаньні з~харчаваньнем 2--3 разы на дзень. Вядома, важна разумець, што на кароткатэрміновым этапе любая, нават абсурдная, дыета можа прывесьці да пэўных вынікаў выключна за кошт большай увагі да харчаваньня. Памятайце пра тое, што для чалавека нашмат фізыялягічней абмяжоўваць доступ да ежы, а~не скарачаць колькасьць калёрыяў.
 
-Аднак заўсёды ўзьнікае пытаньне: чаму столькі дыетолягаў гавораць аб дробавым харчаваньні і столькі людзей кажуць, што схуднелі на ім? Адказ просты: парада есьці часьцей заўсёды гучыць і ўспрымаецца больш пазытыўна, чым парада есьці радзей. Акрамя гэтага, частыя прыёмы ежы зьніжаюць узровень грэліну, чым прыносяць часовае палягчэньне. Аднак гэта ня вельмі карысна ў~доўгатэрміновай пэрспэктыве (гл. правіла «Ежце, калі галодныя»).
+Аднак заўсёды ўзьнікае пытаньне: чаму столькі дыетолягаў гавораць аб дробавым харчаваньні і столькі людзей кажуць, што схуднелі на ім? Адказ просты: парада есьці часьцей заўсёды гучыць і ўспрымаецца больш пазытыўна, чым парада есьці радзей. Акрамя гэтага, частыя прыёмы ежы зьніжаюць узровень грэліну\index{грэлін}, чым прыносяць часовае палягчэньне. Аднак гэта ня вельмі карысна ў~доўгатэрміновай пэрспэктыве (гл. правіла «Ежце, калі галодныя»).
 
 \subsection{Як гэта ўплывае на здароўе?}
 
@@ -38,7 +38,7 @@
 Прывучаючы сябе да строгага прыёму ежы празь невялікія прамежкі, мы пакутуем, калі пачынаем прапускаць гэтыя прыёмы праз зрухі працоўнага графіку.
 
 \paragraph{Парушэньне працы шэрагу гармонаў.}
-Працяглае дробавае харчаваньне можа прывесьці да ўзмацненьня інсулінарэзыстэнтнасьці, зьніжэньня ўзроўню грэліну, самататропнага гармону. Карысныя ўласьцівасьці гармону грэліну ўключаюць абарону сэрца і нырак, павышэньне нэўрагенэзу, антыдэпрэсіўнае дзеяньне і іншыя.
+Працяглае дробавае харчаваньне можа прывесьці да ўзмацненьня інсулінарэзыстэнтнасьці, зьніжэньня ўзроўню грэліну\index{грэлін}, самататропнага гармону. Карысныя ўласьцівасьці гармону грэліну\index{грэлін} ўключаюць абарону сэрца і нырак, павышэньне нэўрагенэзу\index{нэўрагенэз}, антыдэпрэсіўнае дзеяньне і іншыя.
 
 \subsection{Асноўныя прынцыпы}
 
@@ -83,7 +83,7 @@
 Часьцей за ўсё дрымотнасьць пасьля ежы зьвязаная або з~паабедзенным зьніжэньнем картызолу (час сыесты), або зь вялікай колькасьцю вугляводаў. У~першым выпадку можна абедаць пазьней, а~ў другім~--- дадаць больш бялку ў~прыём ежы, што не дае такой рэакцыі.
 
 \paragraph{Беражыце зубы.}
-Кожны прыём ежы~--- гэта кіслотная атака на зубы. Старанна палашчыце рот пасьля кожнага прыёму ежы. Зубная эмаль разьмякчаецца, калі кіслотнасьць у~роце падае ніжэй за 5{,}5\,pH, патрабуецца да гадзіны часу, каб аднавіць кіслотны балянс. Калі ўзьдзеяньне ежы занадта частае і перадусім утрымлівае камбінацыі кіслата + цукар (сокі ці ахаладжальныя напоі), то натуральная абарона сьліны не працуе. Памятайце, што адразу пасьля прыёму ежы (асабліва садавіны) нельга чысьціць зубы!
+Кожны прыём ежы~--- гэта кіслотная атака на зубы. Старанна палашчыце рот пасьля кожнага прыёму ежы. Зубная эмаль\index{зубная эмаль} разьмякчаецца, калі кіслотнасьць у~роце падае ніжэй за 5{,}5\,pH, патрабуецца да гадзіны часу, каб аднавіць кіслотны балянс. Калі ўзьдзеяньне ежы занадта частае і перадусім утрымлівае камбінацыі кіслата + цукар (сокі ці ахаладжальныя напоі), то натуральная абарона сьліны не працуе. Памятайце, што адразу пасьля прыёму ежы (асабліва садавіны) нельга чысьціць зубы!
 
 \paragraph{Вы ня страціце цяглічную масу.}
 Паводле дасьледаваньняў, атлеты выдатна набіраюць масу нават у~вузкім харчовым вакне і з~двума прыёмамі ежы за дзень.
