--- a/nutrition/intro.tex
+++ b/nutrition/intro.tex
@@ -17,12 +17,12 @@
 
 Здаровыя харчовыя звычкі~--- гэта ключ да даўгалецьця. Няхай зьмены будуць невялікімі, але іх моц~--- у~штодзённым паўторы, у~назапашвальным эфэкце! Бо шматлікія сучасныя хваробы, такія як сардэчна-сасудзістыя, атлусьценьне, рак, нэўрадэгенэратыўныя захворваньні й~само па сабе старэньне не ўзьнікаюць за адзін дзень, а~разьвіваюцца працяглы пэрыяд. Таму важна думаць пра сваё харчаваньне ў~доўгатэрміновай пэрспэктыве, бо нашае жыцьцё~--- гэта ня спрынт «схуднець да лета», а~маратон «быць здаровым ды энэргічным доўгія гады і прадухіліць раньняе старэньне». Усе дыеты падобныя тым, што працуюць у~кароткатэрміновай пэрспэктыве і правальваюцца ў~доўгатэрміновай. Чаму? Таму што правільнае харчаваньне~--- гэта лад жыцьця. Мы будзем гаварыць і пра тое, як уплываюць на наш мэтабалізм стрэс, сьвятло, тэмпэратура, фізычная актыўнасьць, нават настрой. Так, вы пачулі слушна~--- радасьць сапраўды спальвае тлушч! Калі вы думаеце аб укараненьні новай харчовай звычкі, падумайце, ці зможаце вы прытрымлівацца яе ўвесь час? Калі не, то вам лепей узяць плянку крыху ніжэй~--- няма сэнсу ў~тым, каб не ўжываць цукар на працягу тыдня, а~потым сарвацца. А~вось калі ўвесьці звычку ўстрымлівацца ад салодкага хаця б раз на два дні, то ўжо праз год гэта дабратворна адаб'ецца на вашым здароўі.
 
-Кожны дзейсны інструмэнт уплыву на здароўе мае й~пабочныя эфэкты. Яда не выключэньне. Сёньня існуюць дзьве супрацьлеглыя тэндэнцыі~--- харчовая залежнасьць, пераяданьне і артарэксія\footnote{Артарэксія~--- разладжэньне прыёму ежы, што характарызуецца дакучлівым імкненьнем да «здаровага і правільнага харчаваньня».~--- \emph{Аўтарскі нататак.}}. Таму перадусім я хачу даць вам некалькі правілаў \textbf{тэхнікі бясьпекі}.
+Кожны дзейсны інструмэнт уплыву на здароўе мае й~пабочныя эфэкты. Яда не выключэньне. Сёньня існуюць дзьве супрацьлеглыя тэндэнцыі~--- харчовая залежнасьць, пераяданьне і артарэксія\index{артарэксія}\footnote{Артарэксія~--- разладжэньне прыёму ежы, што характарызуецца дакучлівым імкненьнем да «здаровага і правільнага харчаваньня».~--- \emph{Аўтарскі нататак.}}. Таму перадусім я хачу даць вам некалькі правілаў \textbf{тэхнікі бясьпекі}.
 \begin{enumerate}[itemindent=3em,labelwidth=1.5em,leftmargin=0pt,nosep]
   \item Вашае здароўе~--- найвышэйшы прыярытэт, таму сумнявайцеся ў~любой інфармацыі, у~тым ліку і ў~той, якую даю я. Памятайце, што агульныя правілы ў~вашым канкрэтным выпадку могуць мець індывідуальныя нюансы. Стаўцеся да інфармацыі як дасьледчык~--- экспэрымэнтуйце й~прымайце ўзважанае рашэньне.
   \item Ня ўсё будзе зразумела й~магчыма зрабіць зь першага разу. Гэта нармальна, вучыцеся на сваіх памылках, рабіце высновы, знаходзьце свае слабыя месцы. Гэта дазволіць вам больш эфэктыўна дзейнічаць у~будучыні. Кепская не памылка, а~тое, што вы нічому не навучыліся.
   \item Пачуцьцё гумару. Стаўцеся да ўсяго прасьцей і не забывайце пасьмяяцца, у~тым ліку і зь сябе. Калі вам ня сьмешна, дык вы ўсталі на шлях, што вядзе да парушэньняў харчовых паводзінаў. Вы заўсёды ўсё можаце зьесьці, ежа~--- гэта выдатная крыніца энэргіі, а~ня зло. Проста трэба акрэсьліць зь ежай межы для вашага агульнага дабра.
-  \item Ня ўлазьце ў~спрэчкі й~наогул будзьце партызанам у~пляне зьменаў харчаваньня, але дапамагайце тым, хто шукае дапамогі. Многія людзі і аўтары будуць пераконваць вас, што толькі іх схэма харчаваньня~--- адзіная слушная ў~сьвеце. Памятайце, што існуе мноства варыяцый здаровага харчаваньня, і ваша мэта~--- знайсьці такую для сябе асабіста. Устрымлівайцеся ад маральнай ацэнкі людзей паводле таго, што яны ядуць. Не лічыце сябе лепшым за іншых, калі ясьцё правільна,~--- гэта артарэксія. Вы асабіста ды іншыя людзі ня лепшыя й~ня горшыя праз розны зьмест талерак.
+  \item Ня ўлазьце ў~спрэчкі й~наогул будзьце партызанам у~пляне зьменаў харчаваньня, але дапамагайце тым, хто шукае дапамогі. Многія людзі і аўтары будуць пераконваць вас, што толькі іх схэма харчаваньня~--- адзіная слушная ў~сьвеце. Памятайце, што існуе мноства варыяцый здаровага харчаваньня, і ваша мэта~--- знайсьці такую для сябе асабіста. Устрымлівайцеся ад маральнай ацэнкі людзей паводле таго, што яны ядуць. Не лічыце сябе лепшым за іншых, калі ясьцё правільна,~--- гэта артарэксія\index{артарэксія}. Вы асабіста ды іншыя людзі ня лепшыя й~ня горшыя праз розны зьмест талерак.
   \item Здаровае харчаваньне~--- гэта ня проста ежа, а~стыль жыцьця. Гэта стравы зь дзяцінства, гэта хатнія рытуалы, гэта новыя месцы, гэта прыемная кампанія сяброў, гэта тое, што прыносіць вам глыбокае задавальненьне й~радасьць ад жыцьця. Нясмачная ежа аніяк ня можа быць здаровай.
   \item Знайдзіце балянс паміж гнуткасьцю ды стабільнасьцю. Выпрацоўвайце правілы й~прынцыпы, а~не прывязвайцеся да пэўных прадуктаў ці рэцэптаў. Але адначасова з~гэтым напрацуйце смачныя рэцэпты з~прадуктамі, якія заўсёды ёсьць у~вас пад рукой. Дынамічна зьмяняйце рацыён у~залежнасьці ад сэзону, фізычнай актыўнасьці і запатрабаваньняў арганізму.
   \item Здаровае харчаваньне пачынаецца не з~панядзелка, а~са сьняданку. Паспрабуйце не мяняць рэзка свой рацыён, дзейнічайце плаўна. Нам цяжка адначасова ўкараняць больш за тры звычкі, хоць канчатковае іх высьпяваньне ў~мозгу займае да трох месяцаў! А~перагрузка адно ўзмацняе стрэс і рызыку зрыву. Памятайце пра этапы зьменаў, пра абмежаванасьць сілы волі, сілу звычкі й~важнасьць малых, але штодзённых дзеяў. Дзейнічайце мякка, але настойліва. Кожны прыём ежы~--- гэта магчымасьць трэнаваньня для выпрацоўкі новых, карысных звычак.
